--- a/NEA_Project_Swyft/Swyft/Swyft.project
+++ b/NEA_Project_Swyft/Swyft/Swyft.project
@@ -93,6 +93,7 @@
     </Configuration>
   </Settings>
   <VirtualDirectory Name="src">
+    <File Name="../../../Pictures/GenerateCostMatrix.cpp"/>
     <File Name="../../../Pictures/FuelOverTime.cpp"/>
     <File Name="../../../Pictures/TrafficTimings.cpp"/>
     <File Name="../../../Pictures/ExampleGraph.jpg"/>
