Getting the program to work!

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "~/Documents/VS_Project_Swyft/project-swyft/NEA_Project_Swyft/a.out",
-            "args": [],
+            "program": "${workspaceFolder}/NEA_Project_Swyft/a.out",
+            "args": ["main.cpp", "a.out"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
